--- a/mobile.css
+++ b/mobile.css
@@ -69,6 +69,20 @@ b {
     margin: 25px 10px;
 }
 
+.links {
+    position: absolute;
+    top: 503px;
+    right: 23px;
+    background: linear-gradient(45deg, #7f00ff, pink);
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.links a i {
+    font-size: 23px;
+}
 
 .btns {
     width: 100%;
@@ -142,8 +156,8 @@ button:hover {
     height: 100px;
     width: 100px;
     border-radius: 50%;
-    left: 35%;
-    top: 12%;
+    left: 46%;
+    top: 52%;
     background: linear-gradient(45deg, #7f00ff, pink);
     animation: object2 6s linear infinite;
 }
@@ -168,7 +182,7 @@ button:hover {
 }
 
 .cols {
-    width: 50%;
+    width: 119%;
 }
 
 .topline {
@@ -190,7 +204,7 @@ button:hover {
 
 h1 {
     display: block;
-    font-size: 5em;
+    font-size: 3em;
     font-weight: 900;
     color: #3d535f;
 }
@@ -231,20 +245,21 @@ button {
     /* Hide overflow on small screens */
 }
 
-#splash{
+#splash {
     display: none;
 }
 
 .imgbox img {
-    width: 100%;
+    width: 75%;
     /* Adjust image width */
     height: auto;
     /* Auto adjust height */
     position: relative;
-    top: 0;
-    right: 0;
+    top: 11px;
+    right: -26px;
     animation: none;
     /* Remove animation for small screens */
+    /* z-index: 74; */
 }
 
 /* Remove keyframes for small screens */
